tests/invalid/require_tailrec_1.err_exp3
require_tailrec_1.m:050: In mode number 1 of predicate `map1'/3:
require_tailrec_1.m:050:   warning: self-recursive call is not tail recursive.
require_tailrec_1.m:057: In mode number 1 of predicate `map2'/3:
require_tailrec_1.m:057:   warning: self-recursive call is not tail recursive.
require_tailrec_1.m:065: In mode number 1 of function `even1'/1:
require_tailrec_1.m:065:   warning: mutually recursive call to function
require_tailrec_1.m:065:   `odd1'/1 is not tail recursive.
require_tailrec_1.m:074: In mode number 1 of function `odd1'/1:
require_tailrec_1.m:074:   warning: mutually recursive call to function
require_tailrec_1.m:074:   `even1'/1 is not tail recursive.
require_tailrec_1.m:085: In mode number 1 of predicate `qsortapp_1'/2:
require_tailrec_1.m:085:   warning: self-recursive call is not tail recursive.
require_tailrec_1.m:103: In mode number 1 of predicate `qsortapp_3'/2:
require_tailrec_1.m:103:   warning: self-recursive call is not tail recursive.
require_tailrec_1.m:112: In mode number 1 of predicate `qsortapp_4'/2:
require_tailrec_1.m:112:   error: self-recursive call is not tail recursive.
require_tailrec_1.m:121: In mode number 1 of predicate `qsortapp_5'/2:
require_tailrec_1.m:121:   warning: self-recursive call is not tail recursive.
require_tailrec_1.m:130: In mode number 1 of predicate `qsortapp_6'/2:
require_tailrec_1.m:130:   warning: self-recursive call is not tail recursive.
require_tailrec_1.m:137: In `:- pragma require_tail_recursion' for function
require_tailrec_1.m:137:   `cons'/2:
require_tailrec_1.m:137:   warning: the code defining this function contains no
require_tailrec_1.m:137:   recursive calls at all, tail-recursive or otherwise.
